--- a/first-service.properties
+++ b/first-service.properties
@@ -1,2 +1,2 @@
-first-service.one=one property
-first-service.two=two property
+first-service.one=one updated property
+first-service.two=two updated property
