--- a/second-service.properties
+++ b/second-service.properties
@@ -1,2 +1,2 @@
-second-service.one=one property for second
-second-service.two=two property for second
+second-service.one=property for second
+second-service.two=property for second
